tests/error/struct_errors/protocol_base.err
Error: Unsupported (at $FILE:6:14)
  | 
4 | 
5 | @guppy.struct
6 | class MyProto(Protocol):
  |               ^^^^^^^^ Protocol base is not supported

Help: Add a `@guppy.protocol` annotation to turn this struct into a protocol

Guppy compilation failed due to 1 previous error
